# expanses-monitoring-api

./: CHANGELOG.md  compose.yml  pyproject.toml
src/: __init__.py  __main__.py
src/configs/: configs.py
src/controllers/: ai_controller.py  auth_controller.py  expanses_controller.py
src/databases/: drop_db.sql  generate_db.sql  populate_db.sql
src/middlewares/: db_audit_logs.py
src/models/: __init__.py  models.py
src/routers/: __init__.py  ai_router.py  auth_router.py  expanses_router.py
src/schemas/: auth_schemas.py  custom_expanses_groups_schemas.py  expanses_schemas.py  users_schema.py
src/services/: ai_service.py  auth_service.py  expanses_service.py
