[project]
name = "expanses-monitoring-api"
version = "0.1.1"
description = ""
authors = [
    {name = "Pedro Vieira",email = "pedro515vieira@gmail.com"}
]
package-mode = false
readme = "README.md"


requires-python = ">=3.13"
dependencies = [
    "api-crud-generate-libary @ git+https://github.com/pedro-vlps/api_crud_generate_libary.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
